--- a/requirements.txt
+++ b/requirements.txt
@@ -74,4 +74,25 @@ black==23.12.1
 flake8==7.0.0
 mypy==1.8.0
 email-validator>=2.0.0
-aiofiles==23.1.0
+aiofiles==25.1.0
+aiohttp==3.9.1
+beautifulsoup4==4.14.2
+chardet==5.2.0
+fastapi==0.122.0
+fitz==0.0.1.dev2
+ijson==3.2.3
+lxml==5.1.0
+matplotlib==3.8.2
+numpy==2.3.5
+openai==2.8.1
+openpyxl==3.1.2
+pandas==2.3.3
+Pillow==12.0.0
+playwright==1.41.0
+pydantic==2.12.5
+pydantic_settings==2.12.0
+pytesseract==0.3.10
+python_docx==1.2.0
+PyYAML==6.0.3
+structlog==25.5.0
+tenacity==8.2.3
