--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # =============================================================================
 
 # API Configuration
-SECRET=IS76ev852n3kL0pq
+SECRET=llm_tds_quiz_solver_23f2005381
 EMAIL=23f2005381@ds.study.iitm.ac.in
 API_HOST=0.0.0.0
 API_PORT=8000
